# bigleagz_fantasy

./: .gitignore  README.md  fantasy_baseball.py  pyproject.toml  requirements.txt
.github/workflows/: fantasy_baseball.yml
